OHREX spectrometer on GEMINI

--- a/text/ch1-intro.tex
+++ b/text/ch1-intro.tex
@@ -39,6 +39,8 @@ We sit on the verge of the exa-scale revolution both in terms of computing \cite
 
 This thesis concerns itself with a specific interaction, that of a high-power short-pulse laser incident on a flat solid target. Through the process discussed in this thesis, using state-of-the-art 10 PW laser facilities such as \cite{galesExtremeLightInfrastructure2018}, electron bunches and light pulse of unprecedented charge and brightness can be produced, both with attosecond duration, thus uncovering new avenues for attosecond resolution diagnostics and to access the Schwinger limit. Seemingly counter-intuitively, as the laser power increases, via relativistic effects and for certain conditions, greater coherency in the electron dynamics can be observed and the signals amplified. The red dashed line of figure \ref{fig:intro_lasersystems} could be accessed using next generation sub-etawatt facilities. Before delving into this fascinating phenomenon, the remainder of this chapter will provide some of the relevant background information. Chapter \ref{ch:2-zvp} introduces the Zero Vector Potential of attosecond absorption in this laser-solid interaction. The following chapter discusses the associated process of Surface High Harmonic Generation and the results of a recent experiment at the ORION laser facility where the absolute intensity of individual X-ray harmonics was measured and compared to the theory.
 
+% TODO reword the intro a little bit. Want to make more of the story. Perhaps discuss the recent Nobel prize and interest in attosecond physics, add an extra line on computing power, talk about GEMINI.
+
 \section{Electromagnetism fundamentals}
 The spatio-temporal propagation of electric $\mathbf{E}(t,\mathbf{x})$ and magnetic $\mathbf{B}(t,\mathbf{x})$ fields must satisfy Maxwell's equations \cite{chenIntroductionPlasmaPhysics2016}
 \begin{subequations}
